fixed allowCors, dashboard and add updateStock
